--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head>
-
+  <title>ddouglascarr typescript starter</title>
 </head>
 <body>
-  <h1>Foobar</h1>
-  <script type="text/javascript" src="dist/bundle.js" />
+  <div id="react-root"></div>
+  <script type="text/javascript" src="http://localhost:8080/bundle.js" />
 </body>
